<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_account"
        android:gravity="start"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/cancel"
        app:layout_constraintTop_toTopOf="@+id/caption"
        app:layout_constraintEnd_toEndOf="@+id/caption" />

    <EditText
        android:id="@+id/domain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/domain"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@+id/caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/extension"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/extension"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/domain"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extension"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Spinner
        android:id="@+id/transp_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/transport"
        android:layout_marginTop="5dp"
        android:paddingTop="2dp"
        android:paddingStart="0dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="?android:attr/listSeparatorTextViewStyle"
        />

    <EditText
        android:id="@+id/expire"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/expire"
        android:inputType="numberDecimal"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transp_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <CheckBox
        android:id="@+id/rewriteContactIp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rewrite_contact_ip"
        android:minHeight="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expire"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/add_button"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@+id/rewriteContactIp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

